# Navier-Stokes-equations

./: CMakeLists.txt  README.md  cell.hpp  f.hpp  main.cpp  result.ipynb  vars.hpp
